# GammaEdge

./: .dockerignore  .gitignore  README.md  pyproject.toml  requirements.txt
api/: main.py
api/routes/: backtest.py  health.py  optimize.py
app/: Home.py  utils.py
app/pages/: 01_Data.py  02_RiskModel.py  03_Optimizer.py  04_Backtest.py  05_Attribution.py  06_Scenarios.py
configs/: example_blacklitterman.yaml  example_markowitz.yaml
data/cache/: data_meta_055d030ad296e5f3.json  data_meta_0c8f3c5de1f020b6.json  data_meta_2176974078726c5f.json  data_meta_34d71ac21a227a2e.json  data_meta_657d30263d9dee8f.json  data_meta_770e59b460751db2.json  data_meta_88f47e6941994d9a.json  data_meta_922be64b1194af0a.json  data_meta_923e3d8118625cc5.json  data_meta_c6a8185082a7b31b.json  data_meta_ce880cb3e3fe8e4b.json  data_meta_e0e67f7f345bba93.json  data_meta_f300fccfc3e06d26.json  data_meta_f9170dae946b9aec.json  data_meta_fd10bcbe9d35e6c9.json  data_meta_fe6f31aa758efa0e.json  prices_5810d8a72abf5b7a.parquet  prices_long_02b050773ddac868.parquet  prices_long_055d030ad296e5f3.parquet  prices_long_0c8f3c5de1f020b6.parquet  prices_long_2176974078726c5f.parquet  prices_long_27b31b397ca82cd0.parquet  prices_long_34d71ac21a227a2e.parquet  prices_long_657d30263d9dee8f.parquet  prices_long_770e59b460751db2.parquet  prices_long_88c2e32b0a6ac2a5.parquet  prices_long_88f47e6941994d9a.parquet  prices_long_922be64b1194af0a.parquet  prices_long_923e3d8118625cc5.parquet  prices_long_c6a8185082a7b31b.parquet  prices_long_ce880cb3e3fe8e4b.parquet  prices_long_d7f4155a339cadeb.parquet  prices_long_e0e67f7f345bba93.parquet  prices_long_f300fccfc3e06d26.parquet  prices_long_f9170dae946b9aec.parquet  prices_long_fd10bcbe9d35e6c9.parquet  prices_long_fe6f31aa758efa0e.parquet  risk_model_01d2f17590b70166.json  risk_model_093e375797191893.json  risk_model_0e8e72555395b91f.json  (+27 more)
docker/: Dockerfile  api.Dockerfile  docker-compose.yml
docs/: api_reference.md  index.md  optimizers.md  risk_models.md
notebooks/: 01_eda_universe.ipynb  02_markowitz_demo.ipynb  03_blacklitterman_views.ipynb  04_backtest_analysis.ipynb
portfolio/: __init__.py
portfolio/backtest/: attribution.py  engine.py  metrics.py  reporting.py
portfolio/core/: __innit__.py  guards.py  logger.py  utils.py
portfolio/features/: factors.py  returns.py  risk_models.py  scenarios.py
portfolio/io/: cache.py  data_loader.py
portfolio/optim/: black_litterman.py  cardinality.py  costs_turnover.py  cvar.py  exposures.py  hrp.py  mean_variance.py  risk_parity.py  robust.py  te.py
portfolio/viz/: plot_utils.py
tests/: test_backtest.py  test_data_pipeline.py  test_frontier_sanity.py  test_mean_variance.py  test_risk_models.py
