[tool.poetry]
name = "gammaedge"
version = "0.1.0"
description = "Portfolio optimization and analytics platform"
authors = ["Tu Nombre <tu@email.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "*"
numpy = "*"
scipy = "*"
fastapi = "*"
streamlit = "*"
pyyaml = "*"
plotly = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
